Fix the horizontal scrolling and exclude the details from the projects list

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -149,6 +149,7 @@ main {
   justify-content: center;
   align-items: center;
   text-decoration: none;
+  width: 2.5%;
 }
 
 .arrow-left:hover,
